Fix the home background on mobile safari.

--- a/public/css/home/home.css
+++ b/public/css/home/home.css
@@ -1,5 +1,9 @@
 .home-background {
   background: url("/img/home-background.jpg") no-repeat center center fixed;
+  -webkit-background-size: 100%;
+  -moz-background-size:    100%;
+  -o-background-size:      100%;
+  background-size:         100%;
   -webkit-background-size: cover;
   -moz-background-size:    cover;
   -o-background-size:      cover;
